# CC-Glow

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  idf_component.yml  main.cc  portal_demo.h
main/certs/: manufacturer.pem
main/web/: web_config.html  web_control.html  web_index.html  web_setup.html
src/: main.cpp
